@@ -1,3 +1,9 @@
+2007-05-14  Shawn Betts  <sabetts@shitbender.gagrod>
+
+	* core.lisp (translate-id): add debug output
+
+	* mode-line.lisp (redraw-mode-line-for): add debug output
+
 2007-05-13  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* mode-line.lisp (mode-line-format-elt): add debugging for :eval
